--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -1,70 +1,94 @@
 <div class="container mt-5 mb-5">
-    <div class="columns is-centered">
-      <div class="column is-half">
-        <div class="box bg-transparent">
-          <div class="manga-form">
-            <%= form_with(model: @manga, local: true) do |f| %>
-              <div class="field">
-                <%= f.label :title %>
-                <%= f.text_field :title, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :alternative_title %>
-                <%= f.text_field :alternative_title, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :image_cover, "Image Cover URL" %>
-                <%= f.text_field :image_cover, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :status %>
-                <%= f.select :status, ["Ongoing", "Completed"], {}, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :manga_type, "Manga Type" %>
-                <%= f.text_field :manga_type, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :series %>
-                <%= f.text_field :series, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :author %>
-                <%= f.text_field :author, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :rating %>
-                <%= f.number_field :rating, step: 0.1, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :created_date %>
-                <%= f.date_field :created_date, class: "input bg-transparent" %>
-              </div>
-              <div class="field">
-                <%= f.label :genre %>
-                <%= f.text_area :genre, placeholder: "Comma separated (e.g., Action, Fantasy)", class: "input bg-transparent", rows: "4" %>
-              </div>
-              <div class="field">
-                <%= f.label :synopsis %>
-                <%= f.text_area :synopsis, class: "textarea bg-transparent", rows: "10" %>
-              </div>
-              <div class="field">
-                <div class="actions">
-                  <%= f.submit "Create Manga", class: "button bg-transparent", data: {
-                controller: "confirm",
-                action: "confirm#confirm",
-                confirm_title_value: "Confirmation",
-                confirm_message_value: "Do you want to create the manga?",
-                confirm_confirm_text_value: "Yes, create it!",
-                confirm_button_color_value: "#171515"
-              } %>
+  <h2 class="title has-text-white has-text-centered">
+    <i class="fa-solid fa-book"></i> Create New Manga
+  </h2>
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <div class="box bg-transparent">
+        <div class="manga-form">
+          <%= form_with(model: @manga, local: true) do |f| %>
+            <div class="columns is-multiline">
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :title, class: "label has-text-white" %>
+                  <%= f.text_field :title, class: "input bg-full-transparent" %>
                 </div>
               </div>
-            <% end %>
-          </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :alternative_title, class: "label has-text-white" %>
+                  <%= f.text_field :alternative_title, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :image_cover, "Image Cover URL", class: "label has-text-white" %>
+                  <%= f.text_field :image_cover, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :status, class: "label has-text-white" %>
+                  <%= f.select :status, ["Ongoing", "Completed"], {}, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :manga_type, "Manga Type", class: "label has-text-white" %>
+                  <%= f.text_field :manga_type, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :series, class: "label has-text-white" %>
+                  <%= f.text_field :series, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :author, class: "label has-text-white" %>
+                  <%= f.text_field :author, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :rating, class: "label has-text-white" %>
+                  <%= f.number_field :rating, step: 0.1, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-half">
+                <div class="field">
+                  <%= f.label :created_date, class: "label has-text-white" %>
+                  <%= f.date_field :created_date, class: "input bg-full-transparent" %>
+                </div>
+              </div>
+              <div class="column is-full">
+                <div class="field">
+                  <%= f.label :genre, class: "label has-text-white" %>
+                  <%= f.text_area :genre, placeholder: "Comma separated (e.g., Action, Fantasy)", class: "textarea bg-full-transparent", rows: 3 %>
+                </div>
+              </div>
+              <div class="column is-full">
+                <div class="field">
+                  <%= f.label :synopsis, class: "label has-text-white" %>
+                  <%= f.text_area :synopsis, class: "textarea bg-full-transparent", rows: 6 %>
+                </div>
+              </div>
+              <div class="column is-full has-text-right">
+                <%= f.submit "Create Manga", class: "button bg-transparent px-5", data: {
+          controller: "confirm",
+          action: "confirm#confirm",
+          confirm_title_value: "Confirmation",
+          confirm_message_value: "Do you want to create the manga?",
+          confirm_confirm_text_value: "Yes, create it!",
+          confirm_button_color_value: "#171515"
+        } %>
+              </div>
+            </div>
+          <% end %>
         </div>
-        
-        <%= link_to "Back to list manga", mangas_path, class: "button bg-transparent" %>
       </div>
+      <%= link_to "Back to list manga", mangas_path, class: "button bg-transparent" %>
     </div>
+  </div>
 </div>
