--- a/app/views/static_pages/confirmation_instructions.html.erb
+++ b/app/views/static_pages/confirmation_instructions.html.erb
@@ -1,10 +1,7 @@
-<div class="container">
-    <div class="box bg-full-transparent has-text-centered">
-        <div class="notification bg-transparent">
-            <h2 class="title"><i class="fas fa-envelope"></i> Check Your Email</h2>
-            <p>Please check your Email to confirmation the account.</p>
-            <p>haven't received the email yet? <%= link_to "Send Again", new_user_confirmation_path %></p>
-        </div>
-    </div>
+<div class="container mb-5 mt-5 bg-full-transparent has-text-centered">
+  <div class="notification bg-transparent">
+    <h2 class="title"><i class="fas fa-envelope"></i> Check Your Email</h2>
+    <p>Please check your Email to confirmation the account.</p>
+    <p>haven't received the email yet? <%= link_to "Send Again", new_user_confirmation_path %></p>
+  </div>
 </div>
-
