--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,70 +1,68 @@
-<div class="box bg-full-transparent">
-  <h2 class="title has-text-white has-text-centered">
-    <i class="fas fa-user-plus"></i> Registration
-  </h2>
-  <div class="columns is-centered">
-    <div class="column is-one-third">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "box bg-transparent" }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <br>
-        <div class="field">
-          <div class="control has-icons-left has-icons-right">
-            <%= f.text_field :username, autofocus: true, class: "input is-rounded bg-full-transparent", placeholder: "Username" %>
-            <span class="icon is-small is-left">
-              <i class="fas fa-user"></i>
-            </span>
-          </div>
+<h2 class="title has-text-white has-text-centered mt-4">
+  <i class="fas fa-user-plus"></i> Registration
+</h2>
+<div class="columns is-centered">
+  <div class="column is-one-third">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "box bg-transparent" }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <br>
+      <div class="field">
+        <div class="control has-icons-left has-icons-right">
+          <%= f.text_field :username, autofocus: true, class: "input bg-full-transparent", placeholder: "Username" %>
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
         </div>
-        <div class="field">
-          <div class="control has-icons-left has-icons-right">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input is-rounded bg-full-transparent", placeholder: "Email" %>
-            <span class="icon is-small is-left">
-              <i class="fa fa-envelope"></i>
-            </span>
-          </div>
+      </div>
+      <div class="field">
+        <div class="control has-icons-left has-icons-right">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input bg-full-transparent", placeholder: "Email" %>
+          <span class="icon is-small is-left">
+            <i class="fa fa-envelope"></i>
+          </span>
         </div>
-        <div class="field" data-controller="toggle-password">
-          <div class="control has-icons-left has-icons-right">
-            <%= f.password_field :password, autocomplete: "new-password", class: "input is-rounded bg-full-transparent", placeholder: "Password", id: "password-field", data: { toggle_password_target: "password" } %>
-            <span class="icon is-small is-left">
-              <i class="fa fa-lock"></i>
-            </span>
-            <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
-              <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
-            </span>
-          </div>
+      </div>
+      <div class="field" data-controller="toggle-password">
+        <div class="control has-icons-left has-icons-right">
+          <%= f.password_field :password, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password", id: "password-field", data: { toggle_password_target: "password" } %>
+          <span class="icon is-small is-left">
+            <i class="fa fa-lock"></i>
+          </span>
+          <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
+            <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
+          </span>
         </div>
-        <div class="field" data-controller="toggle-password">
-          <div class="control has-icons-left has-icons-right">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input is-rounded bg-full-transparent", placeholder: "Password Confirmation", id: "password-confirmation-field", data: { toggle_password_target: "password" } %>
-            <span class="icon is-small is-left">
-              <i class="fa fa-lock"></i>
-            </span>
-            <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
-              <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
-            </span>
-          </div>
+      </div>
+      <div class="field" data-controller="toggle-password">
+        <div class="control has-icons-left has-icons-right">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input bg-full-transparent", placeholder: "Password Confirmation", id: "password-confirmation-field", data: { toggle_password_target: "password" } %>
+          <span class="icon is-small is-left">
+            <i class="fa fa-lock"></i>
+          </span>
+          <span class="icon is-small is-right" style="pointer-events: all; cursor: pointer" data-action="click->toggle-password#toggle">
+            <i class="fa fa-fw fa-eye" data-toggle-password-target="icon"></i>
+          </span>
         </div>
-        <div class="field">
-          <label class="checkbox">
-            <input type="checkbox" />
-            Term and Condition
-          </label>
+      </div>
+      <div class="field">
+        <label class="checkbox">
+          <input type="checkbox" />
+          Term and Condition
+        </label>
+      </div>
+      <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+      <% site_key = Rails.application.credentials.dig(:hcaptcha, :site_key) %>
+      <div class="h-captcha" data-sitekey="<%= site_key %>" data-theme="dark" data-size="compact"></div>
+      <div class="field">
+        <div class="control">
+          <%= f.submit "Sign Up", class: "button is-fullwidth bg-transparent" %>
         </div>
-        <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
-        <% site_key = Rails.application.credentials.dig(:hcaptcha, :site_key) %>
-        <div class="h-captcha" data-sitekey="<%= site_key %>" data-theme="dark" data-size="compact"></div>
-        <div class="field">
-          <div class="control">
-            <%= f.submit "Sign Up", class: "button is-fullwidth is-rounded" %>
-          </div>
-        </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <div class="has-text-centered mt-3">
-      <a href="/users/sign_in">Login</a><br>
-    </div>
+</div>
+<div class="field">
+  <div class="has-text-centered mt-3 mb-3">
+    <%= link_to "Login", "/users/sign_in", class: "button bg-transparent is-small" %>
   </div>
 </div>
