delete rounded button

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -44,8 +44,8 @@
         </div>
       </div>
       <div class="buttons is-centered mt-4">
-        <%= link_to "Account Setting", edit_user_registration_path, class: "button is-rounded bg-transparent" %>
-        <%= link_to "Return to Home", root_path, class: "button is-rounded bg-transparent" %>
+        <%= link_to "Account Setting", edit_user_registration_path, class: "button bg-transparent" %>
+        <%= link_to "Return to Home", root_path, class: "button bg-transparent" %>
       </div>
     </div>
   </div>
