--- a/app/views/member/dashboard/index.html.erb
+++ b/app/views/member/dashboard/index.html.erb
@@ -45,8 +45,8 @@
       </div>
       <!-- Quick Actions -->
       <div class="buttons is-centered mt-4">
-        <%= link_to "Account Setting", edit_user_registration_path, class: "button is-rounded bg-transparent" %>
-        <%= link_to "Return to Home", root_path, class: "button is-rounded bg-transparent" %>
+        <%= link_to "Account Setting", edit_user_registration_path, class: "button bg-transparent" %>
+        <%= link_to "Return to Home", root_path, class: "button bg-transparent" %>
       </div>
     </div>
   </div>
