--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,11 @@
   background: #cecece;
 }
 
+::selection {
+  background-color: #f7f7f7;  
+  color: #000000;            
+}
+
 .table-container {
   overflow-x: auto;
 }
